adding home page

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -32,3 +32,7 @@ body {
 .red-linear-bg {
     background: linear-gradient(90deg, #d92424 0%, #DF0000 100%);
 }
+
+.white-drop-shadow {
+    filter: drop-shadow(10px 10px 100px rgba(255, 255, 255, 0.25));
+}
